style.css
*{
    padding: 0%;
    margin: 0%;
  font-family: 'Creepster', cursive;
}
/* styling for page 1-------------------*/
body{
    height: 100vh;
    background-image: url(main2.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
}
.mainpage-container{
    height: 300px;
    width: 500px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 30px;
    border-radius: 25px;
 

}
#explorebtn{
    height: 50px;
    width: 250px;
    background-color: white;
    color: black;
    text-decoration: none;
    font-size: medium;
    text-align: center;
    align-content: center;
    font-size: larger;
    border-radius: 10px;
}
#wel{
    font-size: 300%;
}
@media (max-width:700px){
    .mainpage-container{
    height: 300px;
    width: 400px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 30px;
    border-radius: 25px;
 

}
#wel{
    font-size: 200%;
}
}

/* styling for page 2-------------------*/

.sec_div{
    height: 700px;
    width: 800px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex;
    gap: 20px;
    align-items: center;
    justify-content: center;
       border-radius: 20px;
       overflow: scroll;
}
.inner{
    display: flex;
    flex-direction: column;
    gap:20px
}
.seccont{
    height: 200px;
    width: 200px;
    background-color: hsl(0, 0%, 100%,0.5);
     border: solid white;
}
img{
    height: 200px;
    width: 200px;
}
@media (max-width:700px){
    #body2{
    height: 100vh;
    width: 400px;
    background-image: url(secmain.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
 
}
    .sec_div{
    height: 1100px;
    width: 400px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex;
    gap: 20px;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
.seccont{
    height: 250px;
    width: 250px;
    background-color: hsl(0, 0%, 100%,0.5);
   
}
img{
    height: 250px;
    width: 250px;
}
}
/*story page----------------------*/
.story{
    height: 90vh;
    width: 700px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex;
    flex-direction: column;    
    gap: 15px;
    border-radius: 15px;
    overflow: scroll;
}
@media (max-width:700px){
    .story{
    height: 90vh;
    width: 400px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex;
    flex-direction: column; 
    gap: 15px;
    font-size: larger;
}
}
/*charecters page----------------------*/
.charecters{
    height: 90vh;
    width: 900px;
    background-color: hsla(0, 0%, 0%, 0.5);
    color: white;
    border-radius: 15px;
    display: grid;
    grid-template-columns: repeat(5,1fr);
    gap: 10px;
    padding: 20px;
    cursor: pointer; 
}
.members{
    background-color: white;
    border-radius: 15px;
     border: 2px  rgb(255, 255, 255);
  box-shadow: 0 0 8px rgb(255, 255, 255);
}
#eleven{
    background-image: url(eleven.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#mike{
  background-image: url(mike.png);
    background-size: cover;
    background-repeat: no-repeat;
}
#will{
    background-image: url(will.avif);
    background-size: cover;
    background-repeat: no-repeat;
}
#lucus{
    background-image: url(lucus.png);
    background-size: cover;
    background-repeat: no-repeat;
}
#dustin{
   background-image: url(dustin.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#steve{
    background-image: url(steve.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#nancy{
   background-image: url(nancy.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#jonarthan{
    background-image: url(jonarthan.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#willmom{
    background-image: url(willmom.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#hopper{
    background-image: url(hopper.png);
     background-size: cover;
    background-repeat: no-repeat;

}
#holly{
    background-image: url(holly.webp);
    background-size: cover;
    background-repeat: no-repeat;
}
#vecna{
    background-image: url(vecna.webp);
    background-size: cover;
    background-repeat: no-repeat;
}
#billy{
    background-image: url(billy.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#erica{
   background-image: url(erica.webp);
    background-size: cover;
    background-repeat: no-repeat;
}
#dreek{
    background-image: url(dreek.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#robin{
   background-image: url(robin.webp);
    background-size: cover;
    background-repeat: no-repeat;
}
#murray{
   background-image: url(murray.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
#eddie{
   background-image: url(eddie.webp);
    background-size: cover;
    background-repeat: no-repeat;
}
#mikemom{
   background-image: url(mikemom.webp);
    background-size: cover;
    background-repeat: no-repeat;
}
#mikedad{
    background-image: url(mikedad.webp);
    background-size: cover;
    background-repeat: no-repeat;
}
.members1{

  position: fixed;
  top:50%;
  left:50%;
  transform: translate(-50%,-50%);
  display: none;   /* VERY IMPORTANT */
  background:white;
  padding:20px;
  z-index:1000;
  max-width:500px;

}
#overlay{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.7);
  display: none;
  z-index: 999;
}

@media(max-width:700px){
    .c1{
        display: flex;
        flex:row;
    }
   .charecters{
    height: 90vh;
    width: 370px;
    border-radius: 15px;
    display: grid;
    grid-template-columns: repeat(2,1fr);
    column-gap: 10px;
    row-gap: 10px;
    padding: 20px;
    overflow-y: scroll;
} 
.members{
    height:200px ;
}
}
/*quiz page-------------------->*/
.q{
    height: 90vh;
    width: 700px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex; 
    align-items: center;
    justify-content: center;   
    gap: 15px;
    border-radius: 15px;
}
/* Body */
#quizid {
    margin: 0;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: Arial, sans-serif;
}

/* Start Button Container */
.q {
    text-align: center;
}

/* Start Button */
#quizbtn {
    padding: 15px 40px;
    font-size: 24px;
    border: 2px solid white;
    border-radius: 30px;
    cursor: pointer;
    transition: 0.3s ease;
}

#quizbtn:hover {
    background-color: white;
    color: black;
}



/* Question */
#question {
    margin-bottom: 20px;
}






/* Result */
#result {
    margin-top: 20px;
    font-size: 30px;
    color: white;
    text-align: center;
}
@media (max-width:700px){
    .q{
    height: 90vh;
    width: 400px;
    background-color: hsl(0, 0%, 0%,0.5);
    color: white;
    display: flex;
    flex-direction: column; 
    gap: 15px;
    font-size: larger;
}
}
/*vidos------------------>*/
.videobox{
    height: 90vh;
    width: 950px;
    background-color: hsla(0, 0%, 0%, 0.5);
    color: white;
    border-radius: 15px;
    display: grid;
    grid-template-columns: repeat(1,1fr);
    padding: 50px;
    cursor: pointer;
    overflow:scroll;
    
}
.video{
    
    border-radius: 15px;

}
.video video{
    width: 100%;
    height: 100%;
    object-fit: cover;   /* very important */
    border-radius: 15px;
}
@media(max-width:700px){
    .videobox{
    width: 500px;
}
}

